[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://enemy/cerberus/cerberus.gd" type="Script" id=2]
[ext_resource path="res://enemy/cerberus/cerberus.tres" type="SpriteFrames" id=3]
[ext_resource path="res://interface/gui_boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/cerberus/level-win.mp3" type="AudioStream" id=5]
[ext_resource path="res://effects/Action RPG_Music and Sounds_Hit.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 377.005

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Cerberus" type="KinematicBody2D"]
position = Vector2( 100, 100 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
can_move = false

[node name="FiringRange" type="Area2D" parent="."]
position = Vector2( 100, 100 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FiringRange"]
visible = false
shape = SubResource( 1 )

[node name="Shadow" type="AnimatedSprite" parent="."]
position = Vector2( 108, 192 )
scale = Vector2( 5, 5 )
frames = SubResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
position = Vector2( 100, 88 )
scale = Vector2( 2.25, 2.25 )
frames = ExtResource( 3 )
animation = "attack"
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 100, 100 )
collision_layer = 32
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
visible = false
polygon = PoolVector2Array( -116, -38, -110, -7, -125, 12, -121, 68, -154, 95, -125, 138, -128, 175, -95, 196, -27, 189, -17, 149, -26, 120, 29, 121, 39, 151, 75, 167, 145, 128, 185, 73, 205, 28, 155, -35, 173, -92, 111, -163, 61, -226, -63, -232, -87, -188, -136, -179, -193, -96, -145, -20 )

[node name="TimerBite" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TimerFire" type="Timer" parent="."]

[node name="Timer_anim_attack" type="Timer" parent="."]

[node name="TimerKnockback" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 92, 118 )
rotation = 1.5708
polygon = PoolVector2Array( -21.9997, 83.0001, -2.99963, 100, 39.0004, 97.9999, 48.0003, 92.9998, 60.0003, 92.9998, 69.0004, 112, 78.0004, 121, 89.0004, 120, 96.0004, 99.9996, 94.0003, 79.9997, 105, 75.9996, 124, 90.9995, 137, 93.9995, 148, 89.9995, 154, 75.9994, 156, 51.9994, 147, 35.9995, 136, 28.9995, 117, 36.9996, 106, 40.9996, 83.0001, 37.9997, 73, 13.9997, 76.9998, -49.0003, 110, -53.0004, 123, -66.0004, 123, -98.0004, 110, -114, 90.9996, -107, 77.9997, -92.0003, 72.9996, -108, 65.9996, -114, 71.9996, -122, 65.9994, -157, 44.9993, -182, 6.99934, -184, -23.0006, -161, 5.99941, -162, 33.9995, -136, 37.9996, -109, 19.9997, -86.0001, -52.0003, -84.9998, -43.0004, -103, -68.0005, -149, -123, -130, -152, -85.9995, -127, -65.9995, -189, -49.9993, -196, 16.0007, -168, 39.0006, -142, 42.0005, -174, 51.0006, -150, 116.001, -108.999, 159, -61.9995, 131, -77.9997, 91.0003 )
__meta__ = {
"_edit_group_": true
}

[node name="BossHealthbar" parent="." instance=ExtResource( 4 )]

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SlashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="healthChanged" from="." to="." method="_on_Enemy_healthChanged"]
[connection signal="body_entered" from="FiringRange" to="." method="_on_FiringRange_body_entered"]
[connection signal="body_exited" from="FiringRange" to="." method="_on_FiringRange_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="TimerBite" to="." method="_on_TimerBite_timeout"]
[connection signal="timeout" from="TimerFire" to="." method="_on_TimerFire_timeout"]
[connection signal="timeout" from="Timer_anim_attack" to="." method="_on_Timer_anim_attack_timeout"]
